# face_robot_ws

./: .gitignore  CLAUDE.md  README.md
config/: expressions.yaml  servos.yaml
install/: local_setup.sh  setup.sh
install/face_robot_driver/lib/face_robot_driver/: driver_node  expression_node  eye_node
install/face_robot_driver/share/face_robot_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/face_robot_driver/: package.xml  setup.cfg  setup.py
src/face_robot_driver/face_robot_driver/: doubao_client.py  doubao_protocol.py  driver_node.py  emotion_detector.py  emotion_mirror_node.py  expressions.py  eye_controller.py  eye_node.py  face_tracker_node.py  pom_sc32.py  voice_dialog_node.py
src/face_robot_driver/scripts/: test_expression.py  test_eye.py  test_servo.py
